<resources>
    <string name="app_name">Pertemuan2</string>


    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_or">OR</string>
    <string name="login_doesnt">doesn\'t have account ?</string>
    <string name="login_connect_facebook">Connect With Facebook</string>
    <string name="login_register">Register</string>


    <string name="almost_verify">Verify</string>
    <string name="almost_almost_there">Almost There</string>
    <string name="almost_message">Thankyou for registering with us. One more\n
    step, you need to check your email\n to active your account</string>


    <string name="verify_send">Send</string>
    <string name="verify_enter_code">enter verification code here...</string>
    <string name="verify_verify_account">Verify your Account</string>
    <string name="verify_resend">doesn\'t get the code? Resend</string>
    <string name="verify_we_have_send">We have send verification code to your email</string>


    <string name="register_register">Register</string>
    <string name="register_agree">Agree with Term and Conditions</string>
    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_phone">Phone Number</string>
    <string name="register_male">Male</string>
    <string name="register_female">Female</string>
    <string name="register_password">Password</string>
    <string name="register_retype_password">Retype Password</string>
    <string name="register_home_address">Home Address</string>
    <string name="register_location">Default Location</string>
    <string name="register_personal">Personal</string>
    <string name="register_org">Organization</string>

    <string name="home_nama">Ahmad Hartaji</string>
    <string name="home_blood">Blood Type :</string>
    <string name="home_type">B</string>
    <string name="home_give">Blood Give</string>
    <string name="home_received">Blood Received</string>
    <string name="home_thanks">Thanks</string>
    <string name="home_75">75</string>
    <string name="home_100">100</string>
    <string name="home_330">330</string>
    <string name="home_search">Search Donor</string>
    <string name="home_search_detail">Search donor near you</string>
    <string name="home_blood_needed">Blood Needed</string>
    <string name="home_blood_needed_detail">4 Users need blood</string>
    <string name="home_message">Message</string>
    <string name="home_message_detail">5 New Messages</string>
    <string name="home_history">Dono History</string>
    <string name="home_history_detail">5 Give, 2 Received</string>
    <string-array name="golongan_darah">
        <item>Blood Type</item>
        <item>O</item>
        <item>A</item>
        <item>B</item>
        <item>AB</item>
    </string-array>

    <string-array name="reshus">
        <item>Reshus</item>
        <item>Positive</item>
        <item>Negative</item>
    </string-array>

    <string-array name="job">
        <item>Job</item>
        <item>UI/UX Designer</item>
        <item>Backend Developer</item>
        <item>Android Developer</item>
    </string-array>


</resources>
